@@ -11,6 +11,7 @@ describe_moneta "simple_mongo" do
   end
 
   include_context 'setup_store'
+  it_should_behave_like 'expires'
   it_should_behave_like 'marshallable_key'
   it_should_behave_like 'marshallable_value'
   it_should_behave_like 'not_increment'
